tests/valid/02_function.cps
function one(): integer { return 1; }
let n = one();