tests/invalid/switch/02_duplicate_case.cps
let x: integer = 1;
switch (x) {
  case 1: { }
  case 1: { }   // duplicado E061
}
